# protondb-game-compatibility-prediction

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ANALYSES.md  FEATURES.md  LLM.md.archived  PLAN.md  PLAN_ENRICHMENT.md  PLAN_GITHUB_PROTON.md  PLAN_LLM.md  PLAN_ML.md  PLAN_ML_10.md  PLAN_ML_11.md  PLAN_ML_12.md  PLAN_ML_13.md  PLAN_ML_14.md  PLAN_ML_15.md  PLAN_ML_16.md  PLAN_ML_17.md  PLAN_ML_18.md  PLAN_ML_19.md  PLAN_ML_2.md  PLAN_ML_20.md  PLAN_ML_21.md  PLAN_ML_22.md  PLAN_ML_3.md  PLAN_ML_4.md  PLAN_ML_5.md  PLAN_ML_5_EMBEDDINGS.md  PLAN_ML_5_LLM.md  PLAN_ML_6.md  PLAN_ML_7.md  PLAN_ML_7_text.md  PLAN_ML_8.md  PLAN_ML_9.md  PLAN_ML_9_AWACY.md  PLAN_ML_CURRENT.md  PLAN_PREPROCESSING.md  STEAM_API_RESEARCH.md  STEAM_PICS_RESEARCH.md  STEAM_TECH_DETECTION_RESEARCH.md  TODO.md  feature_research.md
protondb_settings/: cli.py  config.py
scripts/: analyze_cascade_model.py  analyze_current_pipeline.py  experiment_11_2_alt_models.py  experiment_12_contributor.py  experiment_13_relabeling.py  experiment_13b_2pl_irt.py  experiment_13c_iterative_svd.py  experiment_14_pics_features.py  experiment_15_temporal.py  experiment_16_pipeline_fixes.py  experiment_17_final.py  experiment_18_sota.py  experiment_19_interim.py  experiment_19_llm_only.py  experiment_19_nollm.py  experiment_20_reformulation.py  experiment_21_aggregation.py  experiment_21b_aggregated_model.py  experiment_21c_leakage_check.py  experiment_22_text_stage1.py  experiment_9_2_aggregates.py  experiment_9_3_noise.py  experiment_9_4_distillation.py  experiment_9_5_features.py  experiment_9_5_node2vec.py  experiment_cascade.py  experiment_cascade_v2.py  experiment_cascade_v3_stage1_opt.py  experiment_cascade_v4_stage2_opt.py  experiment_cascade_v5_label_noise.py  (+13 more)
(+56 files in other folders)
